--- a/meeting/templates/pilot_summary.html
+++ b/meeting/templates/pilot_summary.html
@@ -11,7 +11,7 @@
 <div class="card mx-4">
   <div class="card-header">
       {% trans "Profile"%}
-      <a href="{% url 'staff_update_pilot' pk=pilot.pk%}"><span class="fas fa-pen float-right"></span></a>
+      <a href="{% url 'staff_update_pilot' pk=pilot.pk%}"><i class="fas fa-pen float-right"></i></a>
   </div>
   <div class="card-body">
     {% include 'includes/elements/pilot_info.html' with pilot=pilot%}
@@ -29,7 +29,7 @@
           <div class="list-group-item d-flex w-100 justify-content-between">
             <span>{{ulm.constructor}} {{ulm.model}}</span>
             <span>{{ulm}}</span>
-            <a href="{% url 'staff_update_ulm' pilot=pilot.pk pk=ulm.pk%}"><span class="fas fa-pen float-right"></span></a>
+            <a href="{% url 'staff_update_ulm' pilot=pilot.pk pk=ulm.pk%}"><i class="fas fa-pen float-right"></i></a>
           </div>
         {% endfor %}
       </div>
@@ -43,11 +43,18 @@
       <div class="list-group list-group-flush">
         {% for ulm in pilot.ulm.all %}
           {% for res in ulm.reservations.all %}
-            <div class="list-group-item d-flex w-100 justify-content-between">
-              <span>{{res.meeting}}</span>
-              <span>{{res}}</span>
-              <a href="{% url 'staff_update_reservation' pilot=pilot.pk pk=res.pk%}"><span class="fas fa-pen float-right"></span></a>
-            </div>
+            {% with modalid="Reservation"|add:res.reservation_number|add:"Modal"%}
+              <div class="list-group-item d-flex w-100 justify-content-between">
+                <span>{{res.meeting}}</span>
+                <span>{{res}}</span>
+                <div class="">
+                  <a href="#{{modalid}}"  data-toggle="modal" data-target="#{{modalid}}"><i class="fas fa-search"></i></a>
+                  <a href="{% url 'staff_update_reservation' pilot=pilot.pk pk=res.pk%}"><i class="fas fa-pen "></i></a>
+                  {% include 'includes/elements/reservation_detail_modal.html' with res=res id=modalid%}
+                </div>
+
+              </div>
+            {% endwith %}
           {% endfor %}
         {% endfor %}
 
@@ -55,6 +62,6 @@
     </div>
   </div>
 </div>
-
+{{res_detail}}
 
 {% endblock%}
