--- a/meeting/templates/staff_reservation_validation.html
+++ b/meeting/templates/staff_reservation_validation.html
@@ -61,6 +61,10 @@
               <th scope="row">{% trans 'Insurance Number'%}</th>
               <td>{{pilot.insurance_number}}</td>
             </tr>
+            <tr>
+              <th scope="row">{% trans 'Phone Number'%}</th>
+              <td>{{pilot.phone_number}}</td>
+            </tr>
           </tbody>
         </table>
         {% endwith%}
@@ -143,7 +147,7 @@
               <td>{{ulm.imatriculation}}</td>
             </tr>
             <tr>
-              <th scope="row">{% trans 'Radion Id'%}</th>
+              <th scope="row">{% trans 'Radio Id'%}</th>
               <td>{{ulm.radio_id}}</td>
             </tr>
           </tbody>
