--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -5,7 +5,7 @@
   <ul class="pagination justify-content-center">
     {% if page_obj.has_previous %}
     <li class="page-item">
-      <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+      <a class="page-link" href="?{{querystring}}&page={{ page_obj.previous_page_number }}" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
         <span class="sr-only">{% trans "Previous" %}</span>
       </a>
@@ -25,13 +25,13 @@
         <a class="page-link" href="#">{{ page_num }} <span class="sr-only">(current)</span></a>
       </li>
       {% else %}
-      <li class="page-item"><a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a></li>
+      <li class="page-item"><a class="page-link" href="?{{querystring}}&page={{ page_num }}">{{ page_num }}</a></li>
       {% endif %}
     {% endfor%}
 
     {% if page_obj.has_next %}
       <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+        <a class="page-link" href="?{{querystring}}&page={{ page_obj.next_page_number }}" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
           <span class="sr-only">{% trans "Next" %}</span>
         </a>
