--- a/pages/templates/contact.html
+++ b/pages/templates/contact.html
@@ -7,5 +7,6 @@
 {% endblock %}
 
 {% block content %}
-
+{% get_chunk 'contact_page' as contact_page %}
+{{ contact_page.content | safe }}
 {% endblock %}
