--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,17 +1,69 @@
-{% extends "base_generic.html" %}
-{% load i18n %}
+{% load static %}{% load i18n %}{% load crispy_forms_tags %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block header %}
-<h1>{% trans "Password Reset"%}</h1>
-{% endblock %}
+<head>
 
-{% block content %}
-  <form action="" method="post">
-  {% csrf_token %}
-  {% if form.email.errors %}
-    {{ form.email.errors }}
-  {% endif %}
-      <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="{%trans "Reset password"%}">
-  </form>
-{% endblock %}
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>{% block title %}{% trans "Salon ULM de Blois" %}{% endblock %}</title>
+
+  <!-- Custom fonts for this template-->
+  <link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+  <!-- Custom styles for this template-->
+  <link rel="stylesheet" href="{% static 'css/sb-admin-2.min.css' %}">
+
+</head>
+
+<body class="bg-gradient-primary">
+
+  <div class="container">
+
+    <div class="card o-hidden border-0 shadow-lg my-5">
+      <div class="card-body p-0">
+        <!-- Nested Row within Card Body -->
+        <div class="row">
+          <div class="col-lg-5 d-none d-lg-block bg-password-image"></div>
+          <div class="col-lg-7">
+            <a href="{% url 'index' %}"><i class="fas fa-chevron-circle-left"></i>{%trans 'Back'%}</a>
+            <div class="p-5">
+              <div class="text-center">
+                <h1 class="h4 text-gray-900 mb-4">{% trans "Forgot Your Password?" %}</h1>
+              </div>
+                {% crispy form %}
+
+              <hr>
+              <div class="text-center">
+                <a class="small" href="{% url 'signup' %}">{% trans "Create an Account!" %}</a>
+              </div>
+              <div class="text-center">
+                <a class="small" href="{% url 'login'%}">{% trans "Already have an account? Login!" %}</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+
+  <!-- Bootstrap core JavaScript-->
+  <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+  <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+
+  <!-- Core plugin JavaScript-->
+  <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
+
+  <!-- Custom scripts for all pages-->
+  <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
+
+</body>
+
+</html>
