--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -31,12 +31,13 @@
         <div class="row">
           <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
           <div class="col-lg-7">
+            <a href="{% url 'index' %}"><i class="fas fa-chevron-circle-left"></i>{%trans 'Back'%}</a>
             <div class="p-5">
               <div class="text-center">
                 <h1 class="h4 text-gray-900 mb-4">{% trans "Create an Account!" %}</h1>
               </div>
                 {% crispy form %}
-              
+
               <hr>
               <div class="text-center">
                 <a class="small" href="{% url 'password_reset' %}">{% trans "Forgot Password?" %}</a>
