add label print

--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -5,6 +5,11 @@
 
 {% block javascript%}
 <script src="{% static 'js/ajax_reservation.js' %}"></script>
+<script src="{% static 'js/print.min.js' %}"></script>
+{% endblock %}
+
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'css/print.min.css' %}">
 {% endblock %}
 
 {% block page_title %}
@@ -47,7 +52,16 @@
     <td class="center">
       {% if res.ulm is not None %}
         <a href="{% url 'staff_reservation_overview' res.pk %}" class="btn btn-primary">{% trans "Validate" %}</a>
-        <a href="#" class="btn btn-warning">{% trans "Print" %}</a>
+        {% with label="label"|add:res.reservation_number%}
+          <div style="display:none" >
+            <div class="" id="{{label}}" style="text-align:center;padding-top:10%">
+                {{res.pilot}}
+                <br>
+                {{res.ulm}}
+            </div>
+          </div>
+          <button type="button" onclick="printJS('{{label}}', 'html')" class="btn btn-warning">{% trans "Print" %}</button>
+        {% endwith %}
       {% endif %}
     </td>
   </tr>
