--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,4 +1,4 @@
-{% load static %}{% load i18n %}{% load widget_tweaks %}{% load crispy_forms_tags %}
+{% load static %}{% load i18n %}{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
