--- a/templates/base/base_logged.html
+++ b/templates/base/base_logged.html
@@ -17,7 +17,9 @@
 
   <!-- Custom styles for this template-->
   <link rel="stylesheet" href="{% static 'css/sb-admin-2.min.css' %}">
+  {% block stylesheet %}
 
+  {% endblock %}
 </head>
 
 <style>
