--- a/meeting/templates/staff_reservation_validation.html
+++ b/meeting/templates/staff_reservation_validation.html
@@ -1,5 +1,7 @@
 {% extends "base_logged.html" %}
 {% load i18n %}
+{% load static %}
+
 
 {% block javascript%}
 <script src="{% static 'js/print.min.js' %}"></script>
