add legal pages

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -26,6 +26,14 @@
                 <li><a href="{% url 'pilot_informations'%}">{% trans "Pilot Informations" %}</a></li>
             </ul>
         </div>
+        <div class="col-sm">
+          <h5>{% trans "legal" %}</h5>
+          <ul>
+            <li><a href="{% url 'privacy' %}">{% trans "Privacy Policies" %}</a></li>
+            <li><a href="{% url 'copyright' %}">{% trans "Copyright Notices" %}</a></li>
+            <li><a href="{% url 'terms' %}">{% trans "Terms and Conditions of Use" %}</a></li>
+          </ul>
+        </div>
     </div>
     <p class="m-0 text-center text-white">Copyright &copy; Salon ULM de Blois 2019</p>
   </div>
