add absolute_url template tag

--- a/templates/emails/reservation_confirmation_request.html
+++ b/templates/emails/reservation_confirmation_request.html
@@ -1,7 +1,7 @@
 {% extends "emails/base_email.html"%}
 {% load i18n %}
 {% load chunks %}
-
+{% load absolute_url %}
 <!-- TODO: a completer  -->
 
 {% block content %}
@@ -9,7 +9,7 @@
 
 {% include 'emails/includes/base/text_row_with_title.html' with text=body_1.content%}
 
-{% url 'index' as link_index%}
+{% absolute_url 'index' as link_index%}
 {% trans "Confirmation" as link_text%}
 {% include 'emails/includes/base/button_row.html' with link=link_index text=link_text%}
 
