--- a/templates/includes/logged_sidebar.html
+++ b/templates/includes/logged_sidebar.html
@@ -115,6 +115,7 @@
       <i class="fas fa-fw fa-question-circle"></i>
       <span>{% trans "FAQ"%}</span></a>
   </li>
+  <!-- TODO add legal pages -->
 
   <!-- Divider -->
   <hr class="sidebar-divider d-none d-md-block">
