add render templatetag and update password reset email

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,6 +1,10 @@
 {% extends "base_generic.html" %}
 {% load i18n %}
 
+{% block header %}
+<h1>{% trans 'Password reset confirmation'%}</h1>
+{% endblock %}
+
 {% block content %}
     {% if validlink %}
         <p>{% trans "Please enter (and confirm) your new password." %}</p>
@@ -19,7 +23,7 @@
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="{trans "Change my password"%}" /></td>
+                    <td><input type="submit" value="{% trans 'Change my password'%}" /></td>
                 </tr>
             </table>
         </form>
