--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,8 +1,12 @@
 {% extends "emails/base_email.html" %}
+{% load chunks %}
+{% load render %}
+
 
 {% block content %}
+{% get_chunk 'email_password_reset' as password_reset%}
+{% render password_reset.content as rendered_chunk%}
 
-Someone asked for password reset for email {{ email }}. Follow the link below:
-{{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{% include 'emails/includes/base/text_row_with_title.html' with text=rendered_chunk%}
 
 {% endblock %}
