add delete user, and delete form template

--- a/meeting/templates/pilot_profile.html
+++ b/meeting/templates/pilot_profile.html
@@ -13,6 +13,7 @@
     {% include 'includes/elements/pilot_info.html' with pilot=pilot%}
     <a href= "{% url 'change_password'%}" class="btn btn-primary">{% trans "Change Password" %}</a>
     <a href= "{% url 'edit_pilot' pilot.pk %}" class="btn btn-warning"><span class="fas fa-pen"></span>{% trans "Edit" %}</a>
+    <a href="{% url 'delete_user' pilot.user.pk %}" class="btn btn-danger"><span class="fas fa-minus-circle">{% trans "Delete account"%}</span></a>
   </div>
 </div>
 
