--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -8,6 +8,6 @@
 
 {% block content %}
   {% get_chunk 'about_page' as about %}
-  {{evaluate about.content|safe}}
+  {{about.content|safe}}
 
 {% endblock %}
