start reworking gettext msgid

--- a/faq/templates/faq.html
+++ b/faq/templates/faq.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block header %}
-<h1>{% trans "FAQ" %}</h1>
+<h1>{% trans "str_FAQ" %}</h1>
 {% endblock %}
 
 {% block content %}
