--- a/meeting/templates/includes/elements/empty_modal.html
+++ b/meeting/templates/includes/elements/empty_modal.html
@@ -16,7 +16,7 @@
       </div>
       <div class="modal-footer">
         {%block footer%}
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'Close' %}</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans 'str_Close' %}</button>
         {%endblock%}
       </div>
     </div>
