--- a/meeting/templates/includes/elements/pilot_info.html
+++ b/meeting/templates/includes/elements/pilot_info.html
@@ -4,27 +4,27 @@
   <table class="table">
     <tbody>
       <tr role="row">
-        <th scope="row">{% trans 'First Name'%}</th>
+        <th scope="row">{% trans 'str_First_name'%}</th>
         <td>{{pilot.user.first_name}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Last Name'%}</th>
+        <th scope="row">{% trans 'str_Last_name'%}</th>
         <td>{{pilot.user.last_name}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Licence Number'%}</th>
+        <th scope="row">{% trans 'str_Licence_number'%}</th>
         <td>{{pilot.licence_number}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Insurance Company'%}</th>
+        <th scope="row">{% trans 'str_Insurance_company'%}</th>
         <td>{{pilot.insurance_company}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Insurance Number'%}</th>
+        <th scope="row">{% trans 'str_Insurance_number'%}</th>
         <td>{{pilot.insurance_number}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Phone Number'%}</th>
+        <th scope="row">{% trans 'str_Phone_number'%}</th>
         <td>{{pilot.phone_number}}</td>
       </tr>
     </tbody>
