--- a/meeting/templates/includes/elements/reservation_detail.html
+++ b/meeting/templates/includes/elements/reservation_detail.html
@@ -4,69 +4,69 @@
   <table class="table">
     <tbody>
       <tr role="row">
-        <th scope="row">{% trans 'Meeting'%}</th>
+        <th scope="row">{% trans 'str_Meeting'%}</th>
         <td>{{res.meeting}}</td>
-        <th scope="row">{% trans 'Reservation number'%}</th>
+        <th scope="row">{% trans 'str_Reservation_number'%}</th>
         <td>{{res.reservation_number}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Pilot'%}</th>
+        <th scope="row">{% trans 'str_Pilot'%}</th>
         <td>{{res.pilot}}</td>
-        <th scope="row">{% trans 'Ulm'%}</th>
+        <th scope="row">{% trans 'str_Ulm'%}</th>
         <td>{{res.ulm}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Arrival slot'%}</th>
+        <th scope="row">{% trans 'str_Arrival_slot'%}</th>
         <td>{{res.time_slot}}</td>
-        <th scope="row">{% trans 'Departure slot'%}</th>
+        <th scope="row">{% trans 'str_Departure_slot'%}</th>
         <td>{{res.depart_time_slot}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Flight plan'%}</th>
+        <th scope="row">{% trans 'str_Flight_plan'%}</th>
         <td>{{res.flight_plan}}</td>
-        <th scope="row">{% trans 'Passanger'%}</th>
+        <th scope="row">{% trans 'str_Passanger'%}</th>
         <td>{{res.passanger}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Esthetic cup'%}</th>
+        <th scope="row">{% trans 'str_Esthetic_cup'%}</th>
         <td>{{res.esthetic_cup}}</td>
-        <th scope="row">{% trans 'For sale'%}</th>
+        <th scope="row">{% trans 'str_For_sale'%}</th>
         <td>{{res.for_sale}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Origin city'%}</th>
+        <th scope="row">{% trans 'str_Origin_city'%}</th>
         <td>{{res.origin_city}}</td>
-        <th scope="row">{% trans 'Origin field'%}</th>
+        <th scope="row">{% trans 'str_Origin_field'%}</th>
         <td>{{res.origin_field}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Fuel reservation'%}</th>
+        <th scope="row">{% trans 'str_Fuel_reservation'%}</th>
         <td>{{res.fuel_reservation}}</td>
-        <th scope="row">{% trans 'Fuel reservation confirmed'%}</th>
+        <th scope="row">{% trans 'str_Fuel_reservation_confirmed'%}</th>
         <td>{{res.fuel_reservation_confirmed}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Fuel advance'%}</th>
+        <th scope="row">{% trans 'str_Fuel_advance'%}</th>
         <td>{{res.fuel_advance}}</td>
-        <th scope="row">{% trans 'Fuel served'%}</th>
+        <th scope="row">{% trans 'str_Fuel_served'%}</th>
         <td>{{res.fuel_served}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Reservation confirmed'%}</th>
+        <th scope="row">{% trans 'str_Reservation_confirmed'%}</th>
         <td>{{res.confirmed}}</td>
-        <th scope="row">{% trans 'Reservation canceled'%}</th>
+        <th scope="row">{% trans 'str_Reservation_canceled'%}</th>
         <td>{{res.canceled}}</td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Arrival'%}</th>
+        <th scope="row">{% trans 'str_Arrival'%}</th>
         <td>{{res.arrival}}</td>
         <th role="row"></th>
         <td></td>
       </tr>
       <tr role="row">
-        <th scope="row">{% trans 'Creation date'%}</th>
+        <th scope="row">{% trans 'str_Creation_date'%}</th>
         <td>{{res.creation_date}}</td>
-        <th scope="row">{% trans 'Modification date'%}</th>
+        <th scope="row">{% trans 'str_Modification_date'%}</th>
         <td>{{res.modification_date}}</td>
       </tr>
     </tbody>
