--- a/meeting/templates/pilot_ulm_list.html
+++ b/meeting/templates/pilot_ulm_list.html
@@ -20,7 +20,7 @@
     <h6 class="card-subtitle mb-2 text-muted">{{ulm.radio_id}}</h6>
     <div class="row mb-2">
       <div class="col-sm">
-        <span class="">{% trans 'Imatriculation:'%} {{ulm.imatriculation}}</span>
+        <span class="">{% trans 'str_Imatriculation:'%} {{ulm.imatriculation}}</span>
         <br>
         <span>{% trans 'Type:' %} {{ulm.type}}</span>
       </div>
