--- a/meeting/templates/staff_fuel_reservation_list.html
+++ b/meeting/templates/staff_fuel_reservation_list.html
@@ -20,8 +20,8 @@
   <thead class="thead-dark">
   <tr>
     <th>{% trans "ID" %}</th>
-    <th>{% trans "Pilot" %}</th>
-    <th>{% trans "Imatriculation" %}</th>
+    <th>{% trans "str_Pilot" %}</th>
+    <th>{% trans "str_Imatriculation" %}</th>
     <th>{% trans "Radio Id" %}</th>
     <th>{% trans "Fuel Reservation" %}</th>
     <th>{% trans "Fuel Served" %}</th>
