--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -24,11 +24,11 @@
     <tr>
     <th>{% trans "ID" %}</th>
     <th>{% trans "Time Slot" %}</th>
-    <th>{% trans "Pilot" %}</th>
-    <th>{% trans "Imatriculation" %}</th>
+    <th>{% trans "str_Pilot" %}</th>
+    <th>{% trans "str_Imatriculation" %}</th>
     <th>{% trans "Radio Id" %}</th>
     <th>{% trans "Fuel" %}</th>
-    <th>{% trans "Flight plan" %}</th>
+    <th>{% trans "str_Flight_plan" %}</th>
     <th>{% trans "Esthetic Cup" %}</th>
     <th class="center">{% trans "Actions" %}</th>
     </tr>
