--- a/meeting/templates/staff_ulm_list.html
+++ b/meeting/templates/staff_ulm_list.html
@@ -50,13 +50,13 @@
 <table id="ulm_table" class="table table-hover">
   <thead class="thead-dark">
     <tr>
-      <th>{% trans "Radio Id" %}</th>
-      <th>{% trans "Imatriculation" %}</th>
+      <th>{% trans "str_Radio_id" %}</th>
+      <th>{% trans "str_Imatriculation" %}</th>
       <th>{% trans "Imatriculation Country" %}</th>
-      <th>{% trans "Constructor"%}</th>
+      <th>{% trans "str_Constructor"%}</th>
       <th>{% trans "Model"%}</th>
       <th>{% trans "Type"%}</th>
-      <th>{% trans "Pilot"%}</th>
+      <th>{% trans "str_Pilot"%}</th>
     </tr>
   </thead>
   <tbody>
