--- a/templates/base/base_form.html
+++ b/templates/base/base_form.html
@@ -28,7 +28,7 @@
       {% include 'form.html' with form=form %}
     {% endblock %}
 
-    <input type="submit" class="btn btn-success" value="{% trans "Submit" %}"></input>
+    <input type="submit" class="btn btn-success" value="{% trans "str_Submit" %}"></input>
   </form>
 
 
