--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -21,7 +21,7 @@
         <div class="col-sm">
             <h5>{% trans "Support" %}</h5>
             <ul>
-                <li><a href="{% url 'faq'%}">{% trans "FAQ" %}</a></li>
+                <li><a href="{% url 'faq'%}">{% trans "str_FAQ" %}</a></li>
                 <li><a href="{% url 'on_site'%}">{% trans "On Site" %}</a></li>
                 <li><a href="{% url 'pilot_informations'%}">{% trans "Pilot Informations" %}</a></li>
             </ul>
