--- a/templates/includes/logged_sidebar.html
+++ b/templates/includes/logged_sidebar.html
@@ -113,7 +113,7 @@
   <li class="nav-item {% if url_name == 'faq' %}active{% endif %}">
     <a class="nav-link" href="{% url 'faq'%}">
       <i class="fas fa-fw fa-question-circle"></i>
-      <span>{% trans "FAQ"%}</span></a>
+      <span>{% trans "str_FAQ"%}</span></a>
   </li>
   <!-- TODO add legal pages -->
 
