--- a/meeting/templates/index.html
+++ b/meeting/templates/index.html
@@ -70,7 +70,7 @@ From the {{ start }}, to the {{ end }}.
     </div>
     <div class="card-footer">
       <!-- TODO add link -->
-      <a href="#" class="btn btn-primary">{% trans 'Register'%}</a>
+      <a href="#" class="btn btn-primary">{% trans 'str_Register'%}</a>
     </div>
   </div>
 </div>
