--- a/meeting/templates/staff_pilot_list.html
+++ b/meeting/templates/staff_pilot_list.html
@@ -46,9 +46,9 @@
 <table id="ulm_table" class="table table-hover">
   <thead class="thead-dark">
     <tr>
-      <th>{% trans "First name" %}</th>
-      <th>{% trans "Last name" %}</th>
-      <th>{% trans "Insurance company" %}</th>
+      <th>{% trans "str_First_name" %}</th>
+      <th>{% trans "str_Last_name" %}</th>
+      <th>{% trans "str_Insurance_company" %}</th>
       <th>{% trans "Insurance number"%}</th>
       <th>{% trans "Licence number"%}</th>
       <th></th>
